--- a/FiltroFir_Alternativo.ipynb
+++ b/FiltroFir_Alternativo.ipynb
@@ -776,15 +776,9 @@
         "\n",
         "###Transformação $-Z^-1$ : Filtro Passa Alta\n",
         "\n",
-        "Essa transformação reflete os polos e zeros em relação à origem do plano\n",
-        "Z\n",
-        "Z.\n",
+        "Essa transformação reflete os polos e zeros em relação à origem do plano Z.\n",
         "\n",
-        "Os zeros que estavam em\n",
-        "z\n",
-        "=\n",
-        "a\n",
-        " são movidos para z=-a.\n",
+        "Os zeros que estavam em são movidos para z=-a.\n",
         "\n",
         "O filtro passa-alta permite a passagem de frequências altas e atenua frequências baixas.\n",
         "\n",
@@ -800,11 +794,7 @@
         "\n",
         "Isso cria uma resposta em frequência mais complexa, com múltiplos polos e zeros\n",
         "\n",
-        "Os zeros que estavam em z=a são movidos para\n",
-        "z\n",
-        "=\n",
-        "$\\sqrt{a}$ e z= - $\\sqrt{a}$\n",
-        " .\n",
+        "Os zeros que estavam em z=a são movidos para z = $\\sqrt{a}$ e z= - $\\sqrt{a}$.\n",
         "O filtro rejeita-faixa atenua uma faixa específica de frequências.\n",
         "\n",
         "###Transformação $-Z^-2$ : Filtro Passa-Faixa\n",
@@ -875,12 +865,11 @@
         "\n",
         "\n",
         "####Faixa de Passagem (Magnitude próxima de 0 dB):\n",
-        "Fase Linear:\n",
+        "\n",
         "\n",
         "Na faixa de passagem, a fase do filtro passa-baixa diminui linearmente com o aumento da frequência. Isso ocorre porque o filtro introduz um atraso de fase proporcional à frequência.\n",
         "\n",
         "####Faixa de Transição (Magnitude caindo):\n",
-        "Fase Linear:\n",
         "\n",
         "Na faixa de transição, a fase continua a diminuir linearmente, mas a taxa de variação pode mudar ligeiramente devido à mudança na magnitude.\n",
         "\n",
@@ -965,12 +954,12 @@
         "    plot_polos_zeros(h_transf, nome)\n"
       ],
       "metadata": {
-        "id": "NvgBn9QNpgkE",
-        "outputId": "ececc73c-3d4c-41b1-ccbe-bfad9991ef29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "NvgBn9QNpgkE",
+        "outputId": "ececc73c-3d4c-41b1-ccbe-bfad9991ef29"
       },
       "execution_count": 1,
       "outputs": [
