--- a/FiltroFir_Alternativo.ipynb
+++ b/FiltroFir_Alternativo.ipynb
@@ -803,12 +803,7 @@
         "\n",
         "Essa transformação também duplica a ordem do filtro, mas com uma inversão de sinal.\n",
         "\n",
-        "Os zeros que estavam em\n",
-        "z=a são movidos para\n",
-        "z\n",
-        "=\n",
-        "j\n",
-        "$\\sqrt{a}$ e z = -j$\\sqrt{a}$\n",
+        "Os zeros que estavam em z=a são movidos para z = j$\\sqrt{a}$ e z = -j$\\sqrt{a}$\n",
         "\n",
         "O filtro passa-faixa permite a passagem de uma faixa específica de frequências e atenua as frequências fora dessa faixa."
       ],
