--- a/FiltroFir_Alternativo.ipynb
+++ b/FiltroFir_Alternativo.ipynb
@@ -794,7 +794,9 @@
         "\n",
         "Isso cria uma resposta em frequência mais complexa, com múltiplos polos e zeros\n",
         "\n",
-        "Os zeros que estavam em z=a são movidos para z = $\\sqrt{a}$ e z= - $\\sqrt{a}$.\n",
+        "Os zeros aparecem em pares simétricos ao longo do círculo unitário.\n",
+        "Os zeros que estavam em z=a são movidos para z = $\\sqrt{a}$ e z = -$\\sqrt{a}$.\n",
+        "\n",
         "O filtro rejeita-faixa atenua uma faixa específica de frequências.\n",
         "\n",
         "###Transformação $-Z^-2$ : Filtro Passa-Faixa\n",
@@ -803,7 +805,7 @@
         "\n",
         "Essa transformação também duplica a ordem do filtro, mas com uma inversão de sinal.\n",
         "\n",
-        "Os zeros que estavam em z=a são movidos para z = j$\\sqrt{a}$ e z = -j$\\sqrt{a}$\n",
+        "Os zeros que estavam em z=a são movidos para z = j$\\sqrt{a}$ e z = -j$\\sqrt{a}$.\n",
         "\n",
         "O filtro passa-faixa permite a passagem de uma faixa específica de frequências e atenua as frequências fora dessa faixa."
       ],
