--- a/FiltroFir_Alternativo.ipynb
+++ b/FiltroFir_Alternativo.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "## Introdução\n",
         "\n",
-        "Filtros FIR (Finite Impulse Response) apesar de apresentar uma ordem elevada, são amplamente utilizados devido à sua estabilidade, precisão e fase linear. Neste trabalho, projetamos um filtro FIR passa-baixa usando o método da janela de Kaiser, garantindo:\n",
+        "Filtros FIR (Finite Impulse Response) apesar de apresentar uma ordem elevada, são amplamente utilizados devido à sua estabilidade, precisão e fase linear. A ideia, é usar um filtro o mais próximo do ideal, causal e com duração finita. Para isso, usamos a técnica do janelamento para truncar um filtro ideal e não-causal, deslocando o mesmo para a direita a fim de torná-lo causal e de duração finita. Portanto, neste trabalho, projetamos um filtro FIR passa-baixa usando o método da janela de Kaiser, garantindo:\n",
         "\n",
         "- Atenuação na banda rejeitada ≥ 50 dB\n",
         "- Frequência de corte: ωc = π/2\n",
@@ -554,14 +554,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 719
         },
         "id": "GSoq2ZwaAAT-",
-        "outputId": "6434a5d4-1272-47fa-f181-f5a9d8d418fe"
+        "outputId": "f16e610a-2afa-4e7b-99cc-e6e5e9d449d0"
       },
       "outputs": [
         {
@@ -613,6 +613,7 @@
         "    frequencias_q_4dec / np.pi, np.unwrap(np.angle(resposta_direta_quantizada_4dec)),\n",
         "    label='Quantizada (Direta) 3 DEC', color='green', linestyle='--', linewidth=2\n",
         ")\n",
+        "\n",
         "\n",
         "plt.title('Fase da Resposta em Frequência - Forma Direta (Precisão Finita)')\n",
         "plt.xlabel('Frequência Normalizada (x π rad/amostra)')\n",
@@ -789,14 +790,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Transformações Básicas\n",
+        "#**Transformações Básicas**\n",
         "\n",
-        "###Filtro Passa-Baixa\n",
+        "###**Filtro Passa-Baixa**\n",
         "\n",
         "Os polos e zeros do filtro passa-baixa são mapeados diretamente para o plano\n",
         "Z sem alteração.\n",
         "\n",
-        "###Transformação $-Z^-1$ : Filtro Passa Alta\n",
+        "\n",
+        "---\n",
+        "\n",
+        "###**Transformação $-Z^{-1}$ : Filtro Passa Alta**\n",
         "\n",
         "Essa transformação reflete os polos e zeros em relação à origem do plano Z.\n",
         "\n",
@@ -808,24 +812,48 @@
         "\n",
         "Isso inverte a resposta em frequência, transformando um filtro passa-baixa em passa-alta.\n",
         "\n",
-        "###Transformação $Z^-2$ : Filtro Rejeita Faixa\n",
+        "---\n",
+        "\n",
+        "###**Transformação $Z^{-2}$ : Filtro Rejeita Faixa**\n",
         "\n",
         "Essa transformação duplica a ordem do filtro, mapeando cada polo e zero para duas localizações no plano Z.\n",
         "\n",
-        "Duplica a ordem do filtro.\n",
+        "Novos zeros aparecem entre os zeros existentes, refletindo a interpolação aplicada.\n",
         "\n",
-        "Isso cria uma resposta em frequência mais complexa, com múltiplos polos e zeros\n",
+        "Isso cria uma resposta em frequência mais complexa, com múltiplos zeros.\n",
         "\n",
         "Os zeros aparecem em pares simétricos ao longo do círculo unitário.\n",
         "O filtro rejeita-faixa atenua uma faixa específica de frequências.\n",
         "\n",
-        "###Transformação $-Z^-2$ : Filtro Passa-Faixa\n",
+        "---\n",
+        "\n",
+        "###**Transformação $-Z^{-2}$ : Filtro Passa-Faixa**\n",
         "\n",
         "Há uma inversão de sinal, resultando em uma resposta em frequência que permite a passagem de uma faixa específica.\n",
         "\n",
-        "Essa transformação também duplica a ordem do filtro, mas com uma inversão de sinal.\n",
+        "O filtro passa-faixa permite a passagem de uma faixa específica de frequências e atenua as frequências fora dessa faixa.\n",
         "\n",
-        "O filtro passa-faixa permite a passagem de uma faixa específica de frequências e atenua as frequências fora dessa faixa."
+        "Quando aplicamos $ Z^{-1} = -z^{-2} $, estamos modificando os coeficientes do filtro FIR original de duas maneiras:\n",
+        "\n",
+        "1. **Interpolação**:  \n",
+        "   - Inserimos **zeros entre os coeficientes originais**, dobrando o comprimento do filtro.\n",
+        "\n",
+        "2. **Inversão Alternada**:  \n",
+        "   - Cada coeficiente original $h[n]$ recebe um **fator de alternância** $(-1)^n $, ou seja, os coeficientes positivos se tornam negativos e vice-versa.\n",
+        "\n",
+        "No domínio da frequência, essa interpolação dobra a periodicidade do espectro, criando novos zeros no domínio\n",
+        "Z (diagrama de polos e zeros).\n",
+        "\n",
+        "### 🧮 **Expressão Matemática**\n",
+        "\n",
+        "$h'[n] = h[n] \\cdot (-1)^n$, com inserção de zeros intermediários\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "p3ieCgTDmH35"
@@ -876,25 +904,31 @@
         "id": "vv4ExOkG795C"
       },
       "source": [
-        "##Comportamento da Fase\n",
+        "#**Comportamento da Fase**\n",
         "\n",
-        "\n",
-        "####Faixa de Passagem (Magnitude próxima de 0 dB):\n",
+        "---\n",
+        "####**Faixa de Passagem (Magnitude próxima de 0 dB):**\n",
         "\n",
         "\n",
         "Na faixa de passagem, a fase do filtro passa-baixa diminui linearmente com o aumento da frequência. Isso ocorre porque o filtro introduz um atraso de fase proporcional à frequência.\n",
         "\n",
-        "####Faixa de Transição (Magnitude caindo):\n",
+        "Dobrar a resposta em frequencia faz a fase decair mais rapido, isso ocorre devido a interpolação.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "####**Faixa de Transição (Magnitude caindo):**\n",
         "\n",
         "Na faixa de transição, a fase continua a diminuir linearmente, mas a taxa de variação pode mudar ligeiramente devido à mudança na magnitude.\n",
         "\n",
         "Ainda assim, o comportamento da fase permanece próximo do linear, pois o filtro ainda está processando o sinal de maneira suave.\n",
         "\n",
-        "####Fase \"Dente de Serra\" (Não-Linear):\n",
-        "Nessa situação, pequenas variações na resposta do filtro (devido a polos e zeros próximos ao círculo unitário) podem causar flutuações rápidas na fase, resultando no comportamento \"dente de serra\".\n",
+        "---\n",
+        "\n",
+        "####**Fase \"Dente de Serra\":**\n",
+        "Nessa situação, pequenas variações na resposta do filtro (devido a zeros próximos ao círculo unitário) podem causar flutuações rápidas na fase, resultando no comportamento \"dente de serra\".\n",
         "\n",
         "\n",
-        "Conclui-se, portanto, que as transformações em frequência acarretam em uma alteração da fase pois mudam o comportamento do atraso do filtro. Dobrar a resposta em frequencia faz a fase decair mais rapido, enquanto que a modulação -1^n causa inversão de fase (π de deslocamento).\n"
+        "Conclui-se, portanto, que as transformações em frequência acarretam em uma alteração da fase pois mudam o comportamento do atraso do filtro."
       ]
     },
     {
