--- a/FiltroFir.ipynb
+++ b/FiltroFir.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# Projeto de Filtro FIR Passa-Baixa com Janela de Kaiser\n",
-        "\n",
+        "Alunos: Gerson Daniel Santos Marques e José Raimundo Alves dos Santos Júnior\n",
         "## Introdução\n",
         "\n",
         "Filtros FIR (Finite Impulse Response) apesar de apresentar uma ordem elevada, são amplamente utilizados devido à sua estabilidade, precisão e fase linear. A ideia, é usar um filtro o mais próximo do ideal, causal e com duração finita. Para isso, usamos a técnica do janelamento para truncar um filtro ideal e não-causal, deslocando o mesmo para a direita a fim de torná-lo causal e de duração finita. Portanto, neste trabalho, projetamos um filtro FIR passa-baixa usando o método da janela de Kaiser, garantindo:\n",
@@ -33,13 +33,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hR7qu0w07946",
-        "outputId": "d8cad2a7-a282-41fb-ad7b-b29a2d35ce2f"
+        "outputId": "d82be230-358f-4974-cd5b-1bc0551598f2"
       },
       "outputs": [
         {
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -469,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -627,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
